--- a/roles/create_logstash_container/templates/logstash.yaml.j2
+++ b/roles/create_logstash_container/templates/logstash.yaml.j2
@@ -3,7 +3,7 @@
 ## https://github.com/elastic/logstash/blob/master/docker/data/logstash/config/logstash-full.yml
 #
 http.host: "0.0.0.0"
-xpack.monitoring.elasticsearch.hosts: [ "elasticsearch770:9200" ]
+xpack.monitoring.elasticsearch.hosts: [ "http://{{ docker_container_name_elasticsearch }}:{{ docker_container_elasticsearch_port }}" ]
 
 ## X-Pack security credentials
 #
