--- a/roles/create_filebeat_container/templates/filebeat.docker.yaml.j2
+++ b/roles/create_filebeat_container/templates/filebeat.docker.yaml.j2
@@ -1,7 +1,7 @@
-filebeat.autodiscovery:
+filebeat.autodiscover:
   providers:
     - type: docker
-      hints.enable: true
+      hints.enabled: true
 
 filebeat.inputs:
 - type: log
@@ -11,7 +11,7 @@ filebeat.inputs:
 
 {% if var_filebeat_container_name == docker_container_name_filebeat_to_logstash %}
 output.logstash:
-  hosts: ["{{ docker_container_name_logstash }}:5400"]
+  hosts: ["{{ docker_container_name_logstash }}:{{ docker_container_logstash_port }}"]
 {% endif %}
 
 {% if var_filebeat_container_name == docker_container_name_filebeat_to_file %}
