--- a/roles/create_filebeat_container/templates/filebeat.docker.yaml.j2
+++ b/roles/create_filebeat_container/templates/filebeat.docker.yaml.j2
@@ -1,14 +1,15 @@
-filebeat.autodiscover:
-  providers:
-    - type: docker
-      templates:
-        - condition:
-            contains:
-              docker.container.name: {{ docker_container_name_filebeat_to_logstash }}
-          config:
-            - type: container
-              paths:
-                - /var/lib/docker/containers/${data.docker.container.id}/*.log
+# filebeat.autodiscover:
+#   providers:
+#     - type: docker
+#       templates:
+#         - condition:
+#             contains:
+#               docker.container.name: {{ docker_container_name_filebeat_to_logstash }}
+#           config:
+#             - type: container
+#               paths:
+#                 - /var/lib/docker/containers/${data.docker.container.id}/*.log
+
 filebeat.inputs:
 - type: log
   paths:
