4 tast done I hope

--- a/roles/create_filebeat_container/templates/filebeat.docker.yaml.j2
+++ b/roles/create_filebeat_container/templates/filebeat.docker.yaml.j2
@@ -1,19 +1,19 @@
-# filebeat.autodiscover:
-#   providers:
-#     - type: docker
-#       templates:
-#         - condition:
-#             contains:
-#               docker.container.name: {{ docker_container_name_filebeat_to_logstash }}
-#           config:
-#             - type: container
-#               paths:
-#                 - /var/lib/docker/containers/${data.docker.container.id}/*.log
+filebeat.autodiscover:
+  providers:
+    - type: docker
+      templates:
+        - condition:
+            contains:
+              docker.container.name: {{ docker_container_name_filebeat_to_logstash }}
+          config:
+            - type: container
+              paths:
+                - /var/lib/docker/containers/${data.docker.container.id}/*.log
 
 filebeat.inputs:
-- type: log
-  paths:
-    - "/usr/share/filebeat/test.log"
+  - type: log
+    paths:
+      - "/usr/share/filebeat/test.log"
 
 
 {% if var_filebeat_container_name == docker_container_name_filebeat_to_logstash %}
