--- a/roles/create_logstash_container/templates/logstash.conf.j2
+++ b/roles/create_logstash_container/templates/logstash.conf.j2
@@ -16,7 +16,7 @@ filter {
   if [input][type] == "container" {
     mutate {
       add_tag => [ "[container][name]" ] 
-      remove_field => [ "[log][file][path]", "[container][id]", "[container][image][name]", "[container][name]" ]
+      remove_field => [ "[log][file][path]", "[prospector][type]", "[container][id]", "[container][image][name]", "[container][name]" ]
       rename => {
         "[host][name]" => "host"
         "message" => "Message"
