--- a/roles/create_logstash_container/templates/logstash.conf.j2
+++ b/roles/create_logstash_container/templates/logstash.conf.j2
@@ -33,8 +33,8 @@ output {
    }
    if [input][type] == "log" { 
       elasticsearch { 
-         hosts => ["{{ docker_container_name_elasticsearch }}:{{ docker_container_elasticsearch_port }}"] 
-         index => "test-%{+YYYY.MM.dd}"
+        hosts => "http://{{ docker_container_name_elasticsearch }}:{{ docker_container_elasticsearch_port }}"
+        index => "test-%{+YYYY.MM.dd}"
       }
    }  
 }
